--- a/_config.yml
+++ b/_config.yml
@@ -1,17 +1,3 @@
-# Site Settings
-title: Squirrel.lu
-baseurl: "www.squirrel.lu"
-url: "http://squirrel.lu"
-
-# Theme Settings
-remote_theme: abhinavs/moonwalk
-
+remote_theme: 
 plugins:
-  - jekyll-remote-theme
-
-# Exclude from processing.
-# The following items will not be processed or included in the site output.
-exclude:
-  - Gemfile
-  - Gemfile.lock
-  - node_modules
+- jekyll-remote-theme 
